--- a/P003195.opf/meta.yml
+++ b/P003195.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P003195
+id: P003195
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W8LS18664
   title: ཟས་རིགས་ཀྱི་བདེ་འཇགས་དང་འཕྲོད་བསྟེན།
-  volume: ''
   author: ''
+  volumes: {}
