volumes of meta updated

--- a/P003195.opf/meta.yml
+++ b/P003195.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W8LS18664
   title: ཟས་རིགས་ཀྱི་བདེ་འཇགས་དང་འཕྲོད་བསྟེན།
   author: ''
-  volumes: {}
+  volumes:
+    1f7721d7a0ee46278216c513544ac757:
+      image_group_id: I8LS18666
+      title: ''
+      volume_number: 1
+      total_pages: 261
