--- a/P003195.opf/layers/v001/Pagination.yml
+++ b/P003195.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: be074322484f424e9164dfefc2c134d4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   999704f0ff8642dfa1b90bd5486b02be:
