--- a/P003195.opf/meta.yml
+++ b/P003195.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P003195
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:46:40.518906
 source_metadata:
   id: bdr:W8LS18664
   title: ཟས་རིགས་ཀྱི་བདེ་འཇགས་དང་འཕྲོད་བསྟེན།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 261
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: false
